--- a/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
+++ b/src/pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html
@@ -29,12 +29,32 @@
             The code tells the app all it needs about your event.
         {% endblocktrans %}
     </p>
-    <div id="qrcodeCanvas"></div>
-    <a href="?flush_key=1" class="btn btn-default">{% trans "Reset authentication token" %}</a>
-    <script type="text/json" id="qrdata">
-        {{ qrdata|safe }}
+    {% if request.event.has_subevents %}
+        <form class="form-inline helper-display-inline" action="" method="get">
+            <p>
+                {% if request.event.has_subevents %}
+                    <select name="subevent" class="form-control">
+                        <option value="">{% trans "Choose sub-event" %}</option>
+                        {% for se in request.event.subevents.all %}
+                            <option value="{{ se.id }}"
+                                    {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
+                                {{ se.name }} – {{ se.get_date_range_display }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                {% endif %}
+                <button class="btn btn-primary" type="submit">{% trans "Show configuration" %}</button>
+            </p>
+        </form>
+    {% endif %}
+    {% if not request.event.has_subevents or subevent %}
+        <div id="qrcodeCanvas"></div>
+        <a href="?flush_key=1" class="btn btn-default">{% trans "Reset authentication token" %}</a>
+        <script type="text/json" id="qrdata">
+            {{ qrdata|safe }}
 
-    </script>
+        </script>
+    {% endif %}
     <script type="text/javascript" src="{% static "pretixplugins/pretixdroid/pretixdroid.js" %}"></script>
 {% endblock %}
 
