--- a/src/pretix/control/templates/pretixcontrol/orders/index.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/index.html
@@ -32,17 +32,26 @@
                 <div class="input-group">
                     <input type="text" name="code" class="form-control" placeholder="{% trans "Order code" %}" autofocus>
                     <span class="input-group-btn">
-                    <button class="btn btn-primary" type="submit">{% trans "Go!" %}</button>
-                </span>
+                        <button class="btn btn-primary" type="submit">{% trans "Go!" %}</button>
+                    </span>
                 </div>
             </form>
             <form class="" action="" method="get">
                 <div class="col-md-2 col-xs-6">
                     {% bootstrap_field filter_form.status layout='inline' %}
                 </div>
-                <div class="col-md-2 col-xs-6">
-                    {% bootstrap_field filter_form.item layout='inline' %}
-                </div>
+                {% if request.event.has_subevents %}
+                    <div class="col-md-1 col-xs-6">
+                        {% bootstrap_field filter_form.item layout='inline' %}
+                    </div>
+                    <div class="col-md-1 col-xs-6">
+                        {% bootstrap_field filter_form.subevent layout='inline' %}
+                    </div>
+                {% else %}
+                    <div class="col-md-2 col-xs-6">
+                        {% bootstrap_field filter_form.item layout='inline' %}
+                    </div>
+                {% endif %}
                 <div class="col-md-2 col-xs-6">
                     {% bootstrap_field filter_form.provider layout='inline' %}
                 </div>
