--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/history.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/history.html
@@ -9,17 +9,20 @@
             {% for log in logs %}
                 <li class="list-group-item logentry">
                     <p class="meta">
-                        <span class="fa fa-clock-o"></span> {{ log.datetime|date:"SHORT_DATETIME_FORMAT" }}
+                        <span class="fa fa-clock-o fa-fw"></span> {{ log.datetime|date:"SHORT_DATETIME_FORMAT" }}
                         {% if log.user %}
-                            <br/><span class="fa fa-user"></span> {{ log.user.get_full_name }}
+                            <br/><span class="fa fa-user fa-fw"></span> {{ log.user.get_full_name }}
                         {% endif %}
                         {% if log.display %}
-                            <br/><span class="fa fa-comment-o"></span> {{ log.display }}
+                            <br/><span class="fa fa-comment-o fa-fw"></span> {{ log.display }}
                         {% endif %}
-                        <br/><span class="fa fa-shopping-cart"></span> {% trans "Sent to orders:" %}
+                        <br/><span class="fa fa-shopping-cart fa-fw"></span> {% trans "Sent to orders:" %}
                         {% for status in log.parsed_data.sendto %}
                             {{ status }}{% if forloop.revcounter > 1 %},{% endif %}
                         {% endfor %}
+                        {% if log.pdata.subevent_obj %}
+                            <br/><span class="fa fa-calendar fa-fw"></span> {{ log.pdata.subevent_obj }}
+                        {% endif %}
                     </p>
                     <p>
                         {% for locale, value in log.pdata.locales.items %}
