EU legislation note

--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -15,6 +15,17 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "Payment providers" %}</legend>
+            <div class="alert alert-warning">
+                <span class="fa fa-w fa-legal fa-4x pull-left"></span>
+                <strong>{% trans "Warning:" %}</strong>
+                {% blocktrans trimmed %}
+                    Please note that EU Directive 2015/2366 bans surcharging payment fees for most common payment
+                    methods within the Europen Union. Depending on the payment method, this might affect
+                    selling to consumers only or to business customers as well. Depending on your country, this
+                    legislation might already be in place or become relevant from January 2018 the latest. This is not
+                    legal advice. If in doubt, consult a lawyer or refrain from charging payment fees.
+                {% endblocktrans %}
+            </div>
 			{% for provider in providers %}
 				<div class="panel panel-default">
 					<div class="panel-heading">
