--- a/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail_settings_fragment.html
@@ -23,6 +23,14 @@
                         {% with form|getattr:item as field %}
                         <label class="col-md-3 control-label">{{ field.label }}</label>
                         <div class="col-md-9">
+                            <ul class="nav nav-tabs">
+                                <li role="presentation" class="active">
+                                    <a data-toggle="tab" type="edit" href="#{{ item }}_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
+                                </li>
+                                <li role="presentation">
+                                    <a data-toggle="tab" type="preview" href="#{{ item }}_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
+                                </li>
+                            </ul>
                             <div class="tab-content">
                                 <div id="{{ item }}_edit" class="tab-pane fade in active">
                                     {% bootstrap_field field show_label=False form_group_class="" %}
@@ -33,14 +41,6 @@
                                     {% endfor %}
                                 </div>
                             </div>
-                            <ul class="nav nav-pills pull-right">
-                                <li role="presentation" class="active">
-                                    <a data-toggle="pill" type="edit" href="#{{ item }}_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
-                                </li>
-                                <li role="presentation">
-                                    <a data-toggle="pill" type="preview" href="#{{ item }}_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
-                                </li>
-                            </ul>
                         </div>
                         {% endwith %}
                     </div>
