Optionally ask for email addresses twice

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -42,6 +42,7 @@
             {% bootstrap_field sform.max_items_per_order layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_asked layout="horizontal" %}
             {% bootstrap_field sform.attendee_names_required layout="horizontal" %}
+            {% bootstrap_field sform.order_email_asked_twice layout="horizontal" %}
             {% bootstrap_field sform.attendee_emails_asked layout="horizontal" %}
             {% bootstrap_field sform.attendee_emails_required layout="horizontal" %}
             {% bootstrap_field sform.cancel_allow_user layout="horizontal" %}
