Correct pluralization for addon help texts

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
@@ -30,11 +30,15 @@
                                     <legend>{{ c.category.name }}</legend>
                                     <p>
                                         {% if c.min_count == c.max_count %}
-                                            {% blocktrans trimmed with min_count=c.min_count %}
+                                            {% blocktrans trimmed count min_count=c.min_count %}
+                                                You need to choose exactly one option from this category.
+                                            {% plural %}
                                                 You need to choose {{ min_count }} options from this category.
                                             {% endblocktrans %}
                                         {% elif c.min_count == 0 %}
-                                            {% blocktrans trimmed with max_count=c.max_count %}
+                                            {% blocktrans trimmed count max_count=c.max_count %}
+                                                You can choose at most one option from this category.
+                                            {% plural %}
                                                 You can choose up to {{ max_count }} options from this category.
                                             {% endblocktrans %}
                                         {% else %}
