--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -224,6 +224,7 @@
                                 {% endfor %}
                             {% endblock %}
                         </ul>
+                        {% include "pretixcontrol/base_after_nav.html" %}
                     </div>
                 </div>
             </nav>
