--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -322,3 +322,13 @@ body.loading #wrapper {
         color: white;
     }
 }
+
+.sidebar-content {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 12px;
+
+    img {
+        max-width: 80%;
+    }
+}
