--- a/src/pretix/control/templates/pretixcontrol/search/orders.html
+++ b/src/pretix/control/templates/pretixcontrol/search/orders.html
@@ -19,7 +19,9 @@
         <div class="col-md-2 col-sm-6 col-xs-12">
             <button class="btn btn-primary btn-block" type="submit">
                 <span class="fa fa-filter"></span>
-                {% trans "Filter" %}
+                <span class="hidden-md">
+                    {% trans "Filter" %}
+                </span>
             </button>
         </div>
     </form>
