--- a/src/pretix/control/templates/pretixcontrol/search/orders.html
+++ b/src/pretix/control/templates/pretixcontrol/search/orders.html
@@ -38,13 +38,16 @@
                 <th>{% trans "User" %}
                     <a href="?{% url_replace request 'ordering' '-email' %}"><i class="fa fa-caret-down"></i></a>
                     <a href="?{% url_replace request 'ordering' 'email' %}"><i class="fa fa-caret-up"></i></a></th>
-                <th>{% trans "Order total" %}
-                    <a href="?{% url_replace request 'ordering' '-total' %}"><i class="fa fa-caret-down"></i></a>
-                    <a href="?{% url_replace request 'ordering' 'total' %}"><i class="fa fa-caret-up"></i></a></th>
                 <th>{% trans "Order date" %}
                     <a href="?{% url_replace request 'ordering' '-datetime' %}"><i class="fa fa-caret-down"></i></a>
                     <a href="?{% url_replace request 'ordering' 'datetime' %}"><i class="fa fa-caret-up"></i></a></th>
-                <th>{% trans "Status" %}
+                <th class="text-right">{% trans "Order total" %}
+                    <a href="?{% url_replace request 'ordering' '-total' %}"><i class="fa fa-caret-down"></i></a>
+                    <a href="?{% url_replace request 'ordering' 'total' %}"><i class="fa fa-caret-up"></i></a></th>
+                <th class="text-right">{% trans "Positions" %}
+                    <a href="?{% url_replace request 'ordering' '-pcnt' %}"><i class="fa fa-caret-down"></i></a>
+                    <a href="?{% url_replace request 'ordering' 'pcnt' %}"><i class="fa fa-caret-up"></i></a></th>
+                <th class="text-right">{% trans "Status" %}
                     <a href="?{% url_replace request 'ordering' '-status' %}"><i class="fa fa-caret-down"></i></a>
                     <a href="?{% url_replace request 'ordering' 'status' %}"><i class="fa fa-caret-up"></i></a></th>
             </tr>
@@ -60,10 +63,16 @@
                         </strong>
                     </td>
                     <td>{{ o.event.name }}</td>
-                    <td>{{ o.email }}</td>
-                    <td>{{ o.total|floatformat:2 }} {{ o.event.currency }}</td>
+                    <td>
+                        {{ o.email }}
+                        {% if o.invoice_address.name %}
+                            <br>{{ o.invoice_address.name }}
+                        {% endif %}
+                    </td>
                     <td>{{ o.datetime|date:"SHORT_DATETIME_FORMAT" }}</td>
-                    <td>{% include "pretixcontrol/orders/fragment_order_status.html" with order=o %}</td>
+                    <td class="text-right">{{ o.total|floatformat:2 }} {{ o.event.currency }}</td>
+                    <td class="text-right">{{ o.pcnt }}</td>
+                    <td class="text-right">{% include "pretixcontrol/orders/fragment_order_status.html" with order=o %}</td>
                 </tr>
             {% empty %}
                 <tr>
