--- a/src/pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.css
+++ b/src/pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.css
@@ -39,3 +39,16 @@ body {
 .preload-font {
     visibility: hidden;
 }
+#source-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: white;
+    width: 100%;
+    text-align: center;
+}
+#source-container textarea {
+    width: 100%;
+    height: 250px;
+}
