--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -66,7 +66,7 @@
                                     {% trans "Cancel" %}
                                 </button>
                                 <button class="btn btn-default" id="source-save">
-                                    {% trans "Save" %}
+                                    {% trans "Apply" %}
                                 </button>
                             </p>
                         </div>
