--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inside %}
-	<form action="" method="post" class="form-horizontal form-plugins">
-		{% csrf_token %}
-		<fieldset>
-			<legend>{% trans "Payment settings" %}</legend>
+    <form action="" method="post" class="form-horizontal form-plugins">
+        {% csrf_token %}
+        <fieldset>
+            <legend>{% trans "Payment settings" %}</legend>
             {% bootstrap_field sform.payment_term_days layout="horizontal" %}
             {% bootstrap_field sform.payment_term_last layout="horizontal" %}
             {% bootstrap_field sform.payment_term_weekdays layout="horizontal" %}
@@ -26,30 +26,36 @@
                     legal advice. If in doubt, consult a lawyer or refrain from charging payment fees.
                 {% endblocktrans %}
             </div>
-			{% for provider in providers %}
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<div class="row">
-							<div class="col-sm-10">
-								<h3 class="panel-title">{{ provider.verbose_name }}</h3>
-							</div>
-						</div>
-					</div>
-					<div class="panel-body">
-						{% bootstrap_form provider.form layout='horizontal' %}
-                        {% with c=provider.settings_content %}
-                            {% if c %}{{ c|safe }}{% endif %}
-                        {% endwith %}
-					</div>
-				</div>
+            {% for provider in providers %}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <h3 class="panel-title">
+                                    <a data-toggle="collapse" href="#{{ provider.identifier }}">
+                                        {{ provider.verbose_name }}
+                                    </a>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="{{ provider.identifier }}" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_form provider.form layout='horizontal' %}
+                            {% with c=provider.settings_content %}
+                                {% if c %}{{ c|safe }}{% endif %}
+                            {% endwith %}
+                        </div>
+                    </div>
+                </div>
             {% empty %}
                 <em>{% trans "There are no payment providers available. Please go to the plugin settings and activate one or more payment plugins." %}</em>
-			{% endfor %}
-		</fieldset>
+            {% endfor %}
+        </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
             </button>
         </div>
-	</form>
+    </form>
 {% endblock %}
