--- a/src/pretix/presale/templates/pretixpresale/event/order_pay_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_pay_confirm.html
@@ -24,7 +24,7 @@
                         </strong>
                     </div>
                     <h3 class="panel-title">
-                        {{ payment_provider.verbose_name }}
+                        {{ payment_provider.public_name }}
                     </h3>
                 </div>
                 <div class="panel-body">
