--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -20,7 +20,7 @@
                                         data-parent="#payment_accordion"
                                         {% if selected == p.provider.identifier %}checked="checked"{% endif %}
                                         data-toggle="radiocollapse" data-target="#payment_{{ p.provider.identifier }}" />
-                                <strong>{{ p.provider.verbose_name }}</strong>
+                                <strong>{{ p.provider.public_name }}</strong>
                             </label>
                         </h4>
                     </div>
