--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -74,15 +74,18 @@ div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], d
   margin-bottom: 0;
 }
 
-.container ul.nav-tabs {
-  margin: 0px 0;
+.preview-panel .nav-tabs {
+  border-bottom: 0px solid #ddd;
 }
 
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 0px 5px 5px 5px;
+    padding: 5px 5px 0px 5px;
+}
+
+.mail-preview-group {
+  margin-bottom: -15px;
 }
 
 .variation-matrix {
