--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_form.html
@@ -50,7 +50,7 @@
             <div class="panel-body">
                 {% if request.event %}
                     <p>
-                        {% blocktrans %}
+                        {% blocktrans trimmed %}
                             On this page, you can import banking data on a per-event level. You also only see
                             unmatched transactions imported directly for this event.
                         {% endblocktrans %}
