--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -35,6 +35,10 @@
 
                 {% blocktrans asvar title_waiting_list_notification %}Waiting list notification{% endblocktrans %}
                 {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="waiting_list" title=title_waiting_list_notification items="mail_text_waiting_list" %}
+
+                {% blocktrans asvar title_order_canceled %}Order canceled{% endblocktrans %}
+                {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="order_canceled" title=title_order_canceled items="mail_text_order_canceled" %}
+
             </div>
         </fieldset>
         <fieldset>
