--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -40,7 +40,7 @@
                     {% for l in request.event.settings.locales %}
                         <a href="{% url "presale:locale.set" %}?locale={{ l }}&next={{ request.path }}%3F{{ request.META.QUERY_STRING|urlencode }}"
                             class="{% if l == request.LANGUAGE_CODE %}active{% endif %}"
-                            ><img src="{% static "pretixbase/img/flags/"|add:l|add:".png" %}"/></a>
+                            >{{ languages|get_item:l }}</a>
                     {% endfor %}
                 </div>
             {% endif %}
